--- a/src/common/styles/mixin.scss
+++ b/src/common/styles/mixin.scss
@@ -31,3 +31,10 @@
   }
 
 }
+
+@mixin dis-flex($justify:center, $align:center, $direction:row) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
+}
